--- a/src/app/components/concept-list/concept-list.component.scss
+++ b/src/app/components/concept-list/concept-list.component.scss
@@ -2,7 +2,8 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+  min-height: 100%;
 
   h1 {
     text-align: center;
